--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="boxmodel">
     <p class="balk">
-    <a class="active" href="HTML proefversie.html">Home</a>
+    <a class="active" href="index.html">Home</a>
     <a href="Top5.html">Top 5</a>
     <a href="Ontstaan.html">Ontstaan</a>
     <a href="Toekomst.html">Toekomst</a>
