--- a/Toekomst.html
+++ b/Toekomst.html
@@ -8,7 +8,7 @@
 <body>
   <div class="boxmodel">
   <p class="balk">
-    <a href="HTML proefversie.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="Top5.html">Top 5</a>
     <a href="Ontstaan.html">Ontstaan</a>
     <a class="active" href="Toekomst.html">Toekomst</a>
