--- a/Top5.html
+++ b/Top5.html
@@ -23,7 +23,7 @@
     <th>Prijs</th>
   </tr>
   <tr>
-    <td>#1 Dell</td>
+    <td><a href="Dell">#1 Dell</a></td>
     <td>XPS 13 (2017)</td>
     <td>€1.741,-</td>
   </tr>
@@ -49,7 +49,7 @@
   </tr>
 </table>
 <br />
-<p class="c"><strong>#1</strong> Dell XPS 13 (2017)</p>
+    <a id="Dell"><p class="c"><strong>#1</strong> Dell XPS 13 (2017)</p></a>
 <center><img class="laptop"  height="300px"src="https://cdn.mos.cms.futurecdn.net/qoyyCa48wSJfV4atneXuEi-650-80.jpg"/></center>
 <br />
 <p class="c"><strong>#2</strong> Asus Zenbook UX310UA</p>
