--- a/Top5.html
+++ b/Top5.html
@@ -49,7 +49,7 @@
   </tr>
 </table>
 <br />
-    <a id="Dell"><p class="c"><strong>#1</strong> Dell XPS 13 (2017)</p></a>
+    <p class="c"><a id="Dell"><strong>#1</strong> Dell XPS 13 (2017)</a></p>
 <center><img class="laptop"  height="300px"src="https://cdn.mos.cms.futurecdn.net/qoyyCa48wSJfV4atneXuEi-650-80.jpg"/></center>
 <br />
 <p class="c"><strong>#2</strong> Asus Zenbook UX310UA</p>
