--- a/Top5.html
+++ b/Top5.html
@@ -23,7 +23,7 @@
     <th>Prijs</th>
   </tr>
   <tr>
-    <td><a href="Dell">#1 Dell</a></td>
+    <td><a href="#Dell">#1 Dell</a></td>
     <td>XPS 13 (2017)</td>
     <td>€1.741,-</td>
   </tr>
