--- a/Top5.html
+++ b/Top5.html
@@ -14,7 +14,7 @@
     <a href="Toekomst.html">Toekomst</a>
   </p>
 
-  <h1><mark>Top 5</mark></h1>
+    <a id="Top"><h1><mark>Top 5</mark></h1></a>
     <h2><mark>Top 5 beste laptops:</mark></h2>
     <table id="t01">
   <tr>
@@ -63,6 +63,8 @@
 <br />
 <p class="c"><strong>#5</strong> Asus ROG Zephyrus GX501</p>
 <center><img class="laptop"  height="300px" src="https://cdn.mos.cms.futurecdn.net/8GycmeP3CahrNUvtkMVV8k-650-80.jpg"/></center>
+    <br />
+    <a href="#Top"><p>Ga naar boven</p></a>
 
 
   </div>
