--- a/Toekomst.html
+++ b/Toekomst.html
@@ -13,7 +13,7 @@
     <a href="Ontstaan.html">Ontstaan</a>
     <a class="active" href="Toekomst.html">Toekomst</a>
   </p>
-  <h1><mark>Toekomst</mark></h1>
+    <a id="Top"><h1><mark>Toekomst</mark></h1></a>
   <h3>De computer van de toekomst</h3>
   <div class="text">
     Hoe 135 miljoen aan onderzoeksfinanciering eruitziet? „A bunch of noisy tubes”,
@@ -69,7 +69,7 @@
     niet een hype-risico? Kouwenhoven vindt van niet: „Het is duidelijk dat de technologie een enorm potentieel heeft. Als de quantumcomputer toch niet blijkt te
     werken is het jammer, maar we hebben het wel geprobeerd. We moeten ons pas schamen als het ergens anders werkt, maar hier niet.”<br /><br />
 
-    <Strong>Bruno van Wayenburg, 8 juli 2015</strong><br /><br />
+    <a href="Top"><p>Ga naar boven</p></a>
   </div>
 </body>
   </div>
