--- a/Toekomst.html
+++ b/Toekomst.html
@@ -69,7 +69,7 @@
     niet een hype-risico? Kouwenhoven vindt van niet: „Het is duidelijk dat de technologie een enorm potentieel heeft. Als de quantumcomputer toch niet blijkt te
     werken is het jammer, maar we hebben het wel geprobeerd. We moeten ons pas schamen als het ergens anders werkt, maar hier niet.”<br /><br />
 
-    <a href="Top"><p>Ga naar boven</p></a>
+    <a href="#Top"><p>Ga naar boven</p></a>
   </div>
 </body>
   </div>
