--- a/Toekomst.html
+++ b/Toekomst.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-<title></title>
+<title>Toekomst</title>
 </head>
   <link rel="stylesheet" type="text/css" href="style.css">
 <body>
