--- a/Top5.html
+++ b/Top5.html
@@ -28,22 +28,22 @@
     <td>€1.741,-</td>
   </tr>
   <tr>
-    <td>#2 Asus</td>
+    <td><a href="#Asus">#2 Asus</a></td>
     <td>Zenbook UX310UA</td>
     <td>€1.027,-</td>
   </tr>
   <tr>
-    <td>#3 Lenovo</td>
+    <td><a href="#Lenovo">#3 Lenovo</a></td>
     <td>Yoga Book</td>
     <td>€700,-</td>
   </tr>
   <tr>
-    <td>#4 Apple</td>
+    <td><a href="#Apple">#4 Apple</a></td>
     <td>Macbook Pro with Touch Bar</td>
     <td>€1.499,-</td>
   </tr>
   <tr>
-    <td>#5 Asus</td>
+    <td><a href="#Asus2">#5 Asus</a></td>
     <td>ROG Zephyrus GX501</td>
     <td>€3.299,-</td>
   </tr>
@@ -52,16 +52,16 @@
     <a id="Dell"><p class="c"><strong>#1</strong> Dell XPS 13 (2017)</p></a>
 <center><img class="laptop"  height="300px"src="https://cdn.mos.cms.futurecdn.net/qoyyCa48wSJfV4atneXuEi-650-80.jpg"/></center>
 <br />
-<p class="c"><strong>#2</strong> Asus Zenbook UX310UA</p>
+    <a id="Asus"><p class="c"><strong>#2</strong> Asus Zenbook UX310UA</p></a>
 <center><img class="laptop"  height="300px" src="https://cdn.mos.cms.futurecdn.net/oVYkAn7Tz9nJP38JeLHCu8-650-80.jpg"/></center>
 <br />
-<p class="c"><strong>#3</strong> Lenovo Yoga Book</p>
+    <a id="Lenovo"><p class="c"><strong>#3</strong> Lenovo Yoga Book</p></a>
 <center><img class="laptop"  height="300px" src="https://cdn.mos.cms.futurecdn.net/Jkozhz9fLHVwvHP85WL3FB-650-80.jpg"/></center>
 <br />
-<p class="c"><strong>#4</strong> Apple Macbook Pro with touchbar</p>
+    <a id="Apple"><p class="c"><strong>#4</strong> Apple Macbook Pro with touchbar</p></a>
 <center><img class="laptop"  height="300px" src="https://cdn.mos.cms.futurecdn.net/VPsJCRgHtNYH2rx88iqXD9-650-80.jpg"/></center>
 <br />
-<p class="c"><strong>#5</strong> Asus ROG Zephyrus GX501</p>
+    <a id="Asus2"><p class="c"><strong>#5</strong> Asus ROG Zephyrus GX501</p></a>
 <center><img class="laptop"  height="300px" src="https://cdn.mos.cms.futurecdn.net/8GycmeP3CahrNUvtkMVV8k-650-80.jpg"/></center>
     <br />
     <a href="#Top"><p>Ga naar boven</p></a>
