--- a/Top5.html
+++ b/Top5.html
@@ -64,7 +64,7 @@
     <a id="Asus2"><p class="c"><strong>#5</strong> Asus ROG Zephyrus GX501</p></a>
 <center><img class="laptop"  height="300px" src="https://cdn.mos.cms.futurecdn.net/8GycmeP3CahrNUvtkMVV8k-650-80.jpg"/></center>
     <br />
-    <a href="#Top"><p>Ga naar boven</p></a>
+    <a href="#Top"><strong><p>Ga naar boven</p></strong></a>
 
 
   </div>
