--- a/Top5.html
+++ b/Top5.html
@@ -6,6 +6,7 @@
 </head>
   <link rel="stylesheet" type="text/css" href="style.css">
 <body>
+  <a id="Top"></a>
   <div class="boxmodel">
   <p class="balk">
     <a href="index.html">Home</a>
@@ -14,7 +15,7 @@
     <a href="Toekomst.html">Toekomst</a>
   </p>
 
-    <a id="Top"><h1><mark>Top 5</mark></h1></a>
+    <h1><mark>Top 5</mark></h1>
     <h2><mark>Top 5 beste laptops:</mark></h2>
     <table id="t01">
   <tr>
