--- a/Toekomst.html
+++ b/Toekomst.html
@@ -6,6 +6,7 @@
 </head>
   <link rel="stylesheet" type="text/css" href="style.css">
 <body>
+  <a id="Top"></a>
   <div class="boxmodel">
   <p class="balk">
     <a href="index.html">Home</a>
@@ -13,7 +14,7 @@
     <a href="Ontstaan.html">Ontstaan</a>
     <a class="active" href="Toekomst.html">Toekomst</a>
   </p>
-    <a id="Top"><h1><mark>Toekomst</mark></h1></a>
+    <h1><mark>Toekomst</mark></h1>
   <h3>De computer van de toekomst</h3>
   <div class="text">
     Hoe 135 miljoen aan onderzoeksfinanciering eruitziet? „A bunch of noisy tubes”,
