--- a/Rekenmachine.html
+++ b/Rekenmachine.html
@@ -10,8 +10,8 @@
   <div class="boxmodel">
   <p class="balk">
     <a href="index.html">Home</a>
-    <a class="active" href="Top5.html">Top 5</a>
-    <a href="Ontstaan.html">Ontstaan</a>
+    <a class="active" href="Rekenmachine.html">Rekenmachine</a>
+    <a href="Contact.html">Contact</a>
     <a href="Toekomst.html">Toekomst</a>
   </p>
 
