--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <div class="boxmodel">
     <p class="balk">
     <a class="active" href="index.html">Home</a>
-    <a href="Top5.html">Top 5</a>
-    <a href="Ontstaan.html">Ontstaan</a>
+    <a href="Rekenmachine.html">Rekenmachine</a>
+    <a href="Contact.html">Contact</a>
     <a href="Toekomst.html">Toekomst</a>
     </p>
   <h1><mark>Home</mark></h1>
