Update and rename Ontstaan.html to Contact.html

--- a/Contact.html
+++ b/Contact.html
@@ -9,8 +9,8 @@
   <div class="boxmodel">
   <p class="balk">
     <a href="index.html">Home</a>
-    <a href="Top5.html">Top 5</a>
-    <a class="active" href="Ontstaan.html">Ontstaan</a>
+    <a href="Rekenmachine.html">Rekenmachine</a>
+    <a class="active" href="Contact.html">Contact</a>
     <a href="Toekomst.html">Toekomst</a>
   </p>
   <h1><mark>Ontstaan</mark></h1>
