--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <a class="active" href="index.html">Home</a>
     <a href="Rekenmachine.html">Rekenmachine</a>
     <a href="Contact.html">Contact</a>
-    <a href="Toekomst.html">Toekomst</a>
+    <a href="Interactief.html">Interactief</a>
     </p>
   <h1><mark>Home</mark></h1>
   <line>
