Update and rename Toekomst.html to Interactief.html

--- a/Interactief.html
+++ b/Interactief.html
@@ -10,9 +10,9 @@
   <div class="boxmodel">
   <p class="balk">
     <a href="index.html">Home</a>
-    <a href="Top5.html">Top 5</a>
-    <a href="Ontstaan.html">Ontstaan</a>
-    <a class="active" href="Toekomst.html">Toekomst</a>
+    <a href="Rekenmachine.html">Rekenmachine</a>
+    <a href="Contact.html">Contact</a>
+    <a class="active" href="Interactief.html">Interactief</a>
   </p>
     <h1><mark>Toekomst</mark></h1>
   <h3>De computer van de toekomst</h3>
