--- a/Interactief.html
+++ b/Interactief.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-<title>Toekomst</title>
+<title>Interactief</title>
 </head>
   <link rel="stylesheet" type="text/css" href="style.css">
 <body>
@@ -14,7 +14,7 @@
     <a href="Contact.html">Contact</a>
     <a class="active" href="Interactief.html">Interactief</a>
   </p>
-    <h1><mark>Toekomst</mark></h1>
+    <h1><mark>Interactief</mark></h1>
   <h3>De computer van de toekomst</h3>
   <div class="text">
     Hoe 135 miljoen aan onderzoeksfinanciering eruitziet? „A bunch of noisy tubes”,
