--- a/Rekenmachine.html
+++ b/Rekenmachine.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-<title>Top 5</title>
+<title>Rekenmachine</title>
 </head>
   <link rel="stylesheet" type="text/css" href="style.css">
 <body>
@@ -12,10 +12,10 @@
     <a href="index.html">Home</a>
     <a class="active" href="Rekenmachine.html">Rekenmachine</a>
     <a href="Contact.html">Contact</a>
-    <a href="Toekomst.html">Toekomst</a>
+    <a href="Interactief.html">Interactief</a>
   </p>
 
-    <h1><mark>Top 5</mark></h1>
+    <h1><mark>Rekenmachine</mark></h1>
     <h2><mark>Top 5 beste laptops:</mark></h2>
     <table id="t01">
   <tr>
