--- a/Contact.html
+++ b/Contact.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-<title>Ontstaan</title>
+<title>Contact</title>
 </head>
   <link rel="stylesheet" type="text/css" href="style.css">
 <body>
@@ -11,9 +11,9 @@
     <a href="index.html">Home</a>
     <a href="Rekenmachine.html">Rekenmachine</a>
     <a class="active" href="Contact.html">Contact</a>
-    <a href="Toekomst.html">Toekomst</a>
+    <a href="Interactief.html">Interactief</a>
   </p>
-  <h1><mark>Ontstaan</mark></h1>
+  <h1><mark>Contact</mark></h1>
   <h3>Eerste computer</h3>
   <p>De geschiedenis van de computer begint met de geschiedenis van het <strong>rekenen</strong>.
     Vanouds hebben mensen hulpmiddelen ontwikkeld voor berekeningen die niet gemakkelijk uit het hoofd gemaakt konden worden.
