--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <title>Computers</title>
+  <title>Home</title>
 </head>
 <body>
   <div class="boxmodel">
