--- a/Contact.html
+++ b/Contact.html
@@ -10,10 +10,26 @@
   <p class="balk">
     <a href="index.html">Home</a>
     <a href="Rekenmachine.html">Rekenmachine</a>
-    <a class="active" href="Contact.html">Contact</a>
+    <a class="active" href="Contact.html">Weer</a>
     <a href="Interactief.html">Interactief</a>
   </p>
-  <h1><mark>Contact</mark></h1>
+  <h1><mark>Weer</mark></h1>
+
+  <div id="weather">
+    <select id="city-select">
+      <option value="5128638">New York</option>
+      <option value="2643744">London</option>
+      <option value="5107152">Amsterdam</option>
+      <option value="292223">Dubai</option>
+    </select>
+    <button type="button" name="button">Get Weather</button>
+    <hr>
+    <h2 id="response"></h2>
   </div>
+
+  </div>
+
+  <script src="weather.js" charset="utf-8"></script>
+
 </body>
 </html>
