--- a/Weer.html
+++ b/Weer.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-<title>Contact</title>
+<title>Weer</title>
 </head>
   <link rel="stylesheet" type="text/css" href="style.css">
 <body>
@@ -10,7 +10,7 @@
   <p class="balk">
     <a href="index.html">Home</a>
     <a href="Rekenmachine.html">Rekenmachine</a>
-    <a class="active" href="Contact.html">Weer</a>
+    <a class="active" href="Weer.html">Weer</a>
     <a href="Interactief.html">Interactief</a>
   </p>
   <h1><mark>Weer</mark></h1>
