--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p class="balk">
     <a class="active" href="index.html">Home</a>
     <a href="Rekenmachine.html">Rekenmachine</a>
-    <a href="Contact.html">Contact</a>
+    <a href="Weer.html">Weer</a>
     <a href="Interactief.html">Interactief</a>
     </p>
   <h1><mark>Home</mark></h1>
