--- a/Interactief.html
+++ b/Interactief.html
@@ -11,7 +11,7 @@
   <p class="balk">
     <a href="index.html">Home</a>
     <a href="Rekenmachine.html">Rekenmachine</a>
-    <a href="Contact.html">Contact</a>
+    <a href="Weer.html">Weer</a>
     <a class="active" href="Interactief.html">Interactief</a>
   </p>
     <h1><mark>Interactief</mark></h1>
