--- a/Interactief.html
+++ b/Interactief.html
@@ -15,6 +15,19 @@
     <a class="active" href="Interactief.html">Interactief</a>
   </p>
     <h1><mark>Interactief</mark></h1>
+    <h2> Het web als interactief medium</h2>
+    Het web is, in tegenstelling tot bijvoorbeeld een krant of de tv, een Interactief medium. 
+    Voor het gebruik van het internet is een actieve deelname van de gebruiker vereist 
+    De informatie die aan de gebruiker gepresenteerd wordt, is het gevolg van zijn handelen.
+
+    <h2>Interactieve website</h2>
+    Een website met meer dan één pagina is volgens de definitie van de term dus al interactief te noemen. 
+    Van de bezoeker wordt immers verwacht dat hij of zij op links klikt, waardoor andere paginas verschijnen.
+    Met de term interactieve website wordt meestal een interactievere website' bedoelt. 
+    Een website die verder gaat dan het plaatsen van fotos, teksten en links en die dus uitnodigt tot meer interactie met de bezoeker.
+    Met behulp van bv. JavaScript en Flash kunnen elementen aan de website worden toegevoegd, 
+    die deze interactie met de bezoeker flink verhogen. Te denken valt aan een eenvoudige toepassingen als 
+    veranderende knoppen en uitklapmenus, tot het aanbieden van complexe spelletjes.
    </div>
 </body>
 </html>
