--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <a href="Interactief.html">Interactief</a>
     </p>
   <h1><mark>Home</mark></h1>
+    <h2>Welkom!</h2>
+    Deze website is een voorbeeld van hoe een interactieve website eruit ziet. Rechtsbovenin vind u een button die je 
+    naar een pagina brengt waar uitgelegd staat wat een interactieve website precies is. Op deze website hebben we 2 voorbeelden 
+    van interactie met de bezoeker van de website. We hebben een rekenmachine gebouwt en ook hebben we via java script een 
+    knop gemaakt waarmee je het huidige weer van 4 verschillende steden op de wereld in kan zien. Dit hebben we gedaan 
+    door informatie op te vragen via een API en vervolgens de informatie die we graag ten toon wilden stellen geselecteerd.
   </div>
 </body>
 
