--- a/Rekenmachine.html
+++ b/Rekenmachine.html
@@ -18,8 +18,8 @@
     <br><hr>
     <form method="GET" action="">
     <pre>
-      nummer 1 : <input type="text" name="one">
-      nummer 2 : <input type="text" name="two">
+      number 1 : <input type="text" name="one">
+      number 2 : <input type="text" name="two">
       operations :
       <input type="radio" name="operation" value="1">plus
       <input type="radio" name="operation" value="2">min
