--- a/Rekenmachine.html
+++ b/Rekenmachine.html
@@ -18,16 +18,16 @@
     <br><hr>
     <form method="GET" action="">
     <pre>
-      number 1 : <input type="text" name="one">
-      number 2 : <input type="text" name="two">
+      nummer 1 : <input type="text" name="one">
+      nummer 2 : <input type="text" name="two">
       operations :
       <input type="radio" name="operation" value="1">plus
       <input type="radio" name="operation" value="2">min
       <input type="radio" name="operation" value="3">keer
       <input type="radio" name="operation" value="4">gedeeld door
       
-      <input type="submit" name="press" value="total">
-      <input type="reset" name="delete" value="deleted">
+      <input type="submit" name="press" value="totaal">
+      <input type="reset" name="delete" value="verwijder">
      </pre>
      </form>
      <hr><br>
