--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="boxmodel">
     <p class="balk">
     <a class="active" href="index.html">Home</a>
-    <a href="Rekenmachine.html">Rekenmachine</a>
+    <a href="Rekenmachine.php">Rekenmachine</a>
     <a href="Weer.html">Weer</a>
     <a href="Interactief.html">Interactief</a>
     </p>
