--- a/Weer.html
+++ b/Weer.html
@@ -9,7 +9,7 @@
   <div class="boxmodel">
   <p class="balk">
     <a href="index.html">Home</a>
-    <a href="Rekenmachine.html">Rekenmachine</a>
+    <a href="Rekenmachine.php">Rekenmachine</a>
     <a class="active" href="Weer.html">Weer</a>
     <a href="Interactief.html">Interactief</a>
   </p>
