--- a/Interactief.html
+++ b/Interactief.html
@@ -12,7 +12,7 @@
     <a href="index.html">Home</a>
     <a href="Rekenmachine.html">Rekenmachine</a>
     <a href="Weer.html">Weer</a>
-    <a class="active" href="Interactief.html">Interactief</a>
+    <a class="active" href="Interactief.php">Interactief</a>
   </p>
     <h1><mark>Interactief</mark></h1>
     <h2> Het web als interactief medium</h2>
