--- a/Interactief.html
+++ b/Interactief.html
@@ -10,7 +10,7 @@
   <div class="boxmodel">
   <p class="balk">
     <a href="index.html">Home</a>
-    <a href="Rekenmachine.html">Rekenmachine</a>
+    <a href="Rekenmachine.php">Rekenmachine</a>
     <a href="Weer.html">Weer</a>
     <a class="active" href="Interactief.php">Interactief</a>
   </p>
